--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
+    "gsap": "^3.12.5",
     "three": "^0.163.0"
   }
 }
